--- a/style.css
+++ b/style.css
@@ -471,7 +471,7 @@ ul {
   background-image: url(https://i.imgur.com/W0Uei37.png);
 }
 .main .work .work-item .imgBox .picBox .pic-inner-resolution .pic3 {
-  background-image: url(https://i.imgur.com/ELWKNvc.png);
+  background-image: url(https://i.imgur.com/QInp9Uu.png);
 }
 .main .work .work-item .imgBox .picBox .pic-inner-resolution .pic4 {
   background-image: url(https://i.imgur.com/5v8IKHn.png);
@@ -486,6 +486,7 @@ ul {
 .main .work .work-item .TextBox .text-right p {
   text-align: left;
   padding-left: 0;
+  letter-spacing: 1px;
   color: #333;
 }
 .main .work .work-item .TextBox .text-right .line {
@@ -517,6 +518,7 @@ ul {
 }
 .main .work .work-item .TextBox .text-left p {
   padding-left: 0;
+  letter-spacing: 1px;
   color: #333;
 }
 .main .work .work-item .TextBox .text-left .line {
@@ -700,7 +702,7 @@ ul {
   .main .experience .timeline-group {
     padding-bottom: 80px;
     padding-left: 10px;
-    height: 750px;
+    height: 980px;
   }
   .main .experience .timeline-group .timeline {
     left: 15px;
@@ -708,6 +710,7 @@ ul {
   .main .experience .timeline-group .timecard-left {
     width: calc( 100% - 24px );
     margin-left: 24px;
+
   }
   .main .experience .timeline-group .timecard-left:after {
     left: -27.5px;
@@ -727,7 +730,7 @@ ul {
     padding-bottom: 120px;
   }
   .main .work .work-item .row .TextBox {
-    padding-left: 40px;
+    padding-left: 15px;
     padding-top: 0;
   }
   .main .work .work-item .row .TextBox .text-right {
