--- a/style.css
+++ b/style.css
@@ -103,9 +103,8 @@ ul {
   margin: 0;
   padding: 0;
 }
-
-.progress{
-  position: fixed;
+#skrollor-body .progress{
+  position: absolute;
   top: 57px;
   left: 0;
   height: 5px;
