--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 * {
   position: relative;
   box-sizing: border-box;
@@ -18,15 +19,18 @@
 .btn {
   width: 120px;
   height: 60px;
-  border-radius: 10px;
-  border: 1px solid #fff;
   padding: 15px;
   color: #fff;
   font-weight: 400;
   letter-spacing: 2px;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: #AB47BC;
 }
 
@@ -93,7 +97,9 @@ a {
   text-decoration: none;
 }
 
-a:hover, a:active, a:focus {
+a:hover,
+a:active,
+a:focus {
   color: #484848;
   text-decoration: none;
 }
@@ -103,7 +109,8 @@ ul {
   margin: 0;
   padding: 0;
 }
-.progress{
+
+.progress {
   position: fixed;
   left: 0;
   top: 57px;
@@ -111,6 +118,7 @@ ul {
   z-index: 100;
   background-color: #c87db4;
 }
+
 .bg {
   position: fixed;
   left: 0;
@@ -191,21 +199,25 @@ ul {
   z-index: 2;
   transition: 0.3s;
 }
+
 .header .navbar {
   padding: 0;
   display: flex;
   justify-content: space-betewwn;
   margin-top: 10px;
 }
+
 .header .navbar .fab {
   font-size: 32px;
   padding: 10px;
   transition: 0.3s;
   color: #fff;
 }
+
 .header .navbar .fab:hover {
   transform: translateY(-10%);
 }
+
 .header .navbar .right .menu .bar {
   width: 32px;
   height: 4px;
@@ -215,12 +227,15 @@ ul {
   margin-bottom: 5px;
   background-color: #fff;
 }
+
 .header .navbar .right .menu:hover .bar1 {
   transform: translateX(-10px);
 }
+
 .header .navbar .right .menu:hover .bar3 {
   transform: translateX(10px);
 }
+
 .header .navbar .responseMenu {
   position: fixed;
   left: 0;
@@ -230,9 +245,11 @@ ul {
   background-color: #fff;
   display: none;
 }
+
 .header .navbar .responseMenu:target {
   display: block;
 }
+
 .header .navbar .responseMenu:target .responseClose {
   position: absolute;
   right: 10px;
@@ -242,6 +259,7 @@ ul {
   transition: 0.5s;
   z-index: 2;
 }
+
 .header .navbar .responseMenu:target .responseClose .bar {
   background-color: #333;
   width: 32px;
@@ -251,22 +269,28 @@ ul {
   top: 50%;
   background-color: #e881a7;
 }
+
 .header .navbar .responseMenu:target .responseClose .bar4 {
   transform: translate(-50%, -50%) rotate(-45deg);
 }
+
 .header .navbar .responseMenu:target .responseClose .bar5 {
   transform: translate(-50%, -50%) rotate(45deg);
 }
+
 .header .navbar .responseMenu:target .responseClose:hover {
   transform: rotate(360deg);
 }
+
 .header .navbar .responseMenu:target .ulmenu {
   text-align: center;
   padding-top: 80px;
 }
+
 .header .navbar .responseMenu:target .ulmenu .responseList {
   font-size: 40px;
 }
+
 .header .navbar .responseMenu:target .ulmenu .responseList:hover {
   color: #e881a7;
 }
@@ -275,9 +299,11 @@ ul {
   background-color: #fff;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
+
 .headerTransparent .left .fab {
   color: #e881a7;
 }
+
 .headerTransparent .right .menu .bar {
   background-color: #e881a7 !important;
 }
@@ -285,6 +311,7 @@ ul {
 .main {
   overflow: hidden;
 }
+
 .main .intro-bg img {
   position: absolute;
   width: 600px;
@@ -292,32 +319,44 @@ ul {
   right: 0px;
   top: -200px;
 }
+
 .main .intro {
   padding-top: 30vh;
   padding-bottom: 20vh;
 }
+
 .main .intro .title h1 {
   color: #fff;
 }
+
 .main .btn {
   margin-top: 30px;
   margin-left: 20px;
+  border: 5px solid;
+  border-image: linear-gradient(220deg, rgb(0, 217, 255) 0%, rgb(183, 0, 255) 100%);
+  border-image-slice: 1;
+  transition: .3s;
 }
+
 .main .btn:hover {
-  background-color: #fff;
-  color: #111;
-  opacity: 0.7;
+  font-size: 20px;
+  line-height: 15px;
+
 }
+
 .main .quote {
   background-color: #fff;
 }
+
 .main .quote .container {
   padding-top: 80px;
   text-align: center;
 }
+
 .main .quote .container .icon {
   text-align: center;
 }
+
 .main .quote .container .icon .fa-quote-right {
   background-color: #EF5350;
   width: 64px;
@@ -327,21 +366,26 @@ ul {
   font-size: 20px;
   color: #fff;
 }
+
 .main .quote .container p {
   padding-left: 0;
 }
+
 .main .quote .container a {
   color: #EC407A;
 }
+
 .main .skill {
   background-color: #fff;
   padding-top: 50px;
   padding-bottom: 130px;
   margin-bottom: 140px;
 }
+
 .main .skill h2 {
   padding-bottom: 40px;
 }
+
 .main .skill .card {
   padding: 10px 20px;
   margin-top: 10px;
@@ -350,8 +394,9 @@ ul {
   margin-bottom: 20px;
   height: 280px;
 }
+
 /* card hover 上下線條(上) Start */
-.main .skill .card:after  {
+.main .skill .card:after {
   content: "";
   position: absolute;
   left: 0;
@@ -361,23 +406,26 @@ ul {
   background-color: rgb(0, 217, 255);
   transition: .5s;
 }
-.main .skill .card:hover:after  {
+
+.main .skill .card:hover:after {
   width: 100%;
 }
+
 /* card hover 上下線條(上) End */
 /* card hover 上下線條(下) Start */
-.main .skill .card:before  {
+.main .skill .card:before {
   content: "";
   position: absolute;
   right: 0;
   bottom: 0;
   height: 3px;
   width: 0;
-  background-color:  rgb(183, 0, 255);
- 
+  background-color: rgb(183, 0, 255);
+
   transition: .5s;
 }
-.main .skill .card:hover:before  {
+
+.main .skill .card:hover:before {
   width: 100%;
 }
 
@@ -390,6 +438,7 @@ ul {
   left: -10px;
   padding: 10px;
 }
+
 .main .skill .card .cardInner {
   padding-left: 32px;
   width: calc(100% -32px);
@@ -399,28 +448,33 @@ ul {
   margin-bottom: 0;
   padding-left: 32px;
 }
+
 .main .skill .card .cardInner p {
   text-align: left;
   padding-right: 10px;
   margin-top: 12px;
   width: calc(100% -60px);
 }
+
 .main .experience {
   padding-top: 80px;
   padding-bottom: 120px;
 }
+
 .main .experience h2 {
   color: #FFF;
 }
+
 .main .experience .timeline-group {
   max-width: 1100px;
   height: 900px;
   margin: 80px auto;
 }
+
 .main .experience .timeline-group .timeline {
   margin-top: 17px;
   width: 6px;
-  height: calc( 100% + 33px );
+  height: calc(100% + 33px);
   background-color: #fff;
   position: absolute;
   left: 50%;
@@ -428,6 +482,7 @@ ul {
   transform: translate(-50%, -50%);
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
 }
+
 .main .experience .timeline-group .timecard-left {
   width: calc(50% - 24px);
   max-height: calc(25% - 24px);
@@ -437,6 +492,7 @@ ul {
   opacity: 0.9;
   border-radius: 20px;
 }
+
 .main .experience .timeline-group .timecard-left:after {
   content: "";
   display: block;
@@ -449,9 +505,11 @@ ul {
   border-radius: 8px;
   background-color: #e881a7;
 }
+
 .main .experience .timeline-group .timecard-two {
   margin-left: calc(50% + 24px);
 }
+
 .main .experience .timeline-group .timecard-right {
   width: calc(50% - 24px);
   max-height: calc(25% - 24px);
@@ -461,6 +519,7 @@ ul {
   opacity: 0.9;
   border-radius: 20px;
 }
+
 .main .experience .timeline-group .timecard-right:before {
   content: "";
   display: block;
@@ -473,30 +532,37 @@ ul {
   border-radius: 8px;
   background-color: #e881a7;
 }
+
 .main .experience .timeline-group .timecard-four {
   margin-left: calc(50% + 24px);
   margin-bottom: 0;
 }
+
 .main .work {
   padding-top: 100px;
   padding-bottom: 100px;
   background-color: #fff;
 }
+
 .main .work h2 {
   color: #e881a7;
 }
+
 .main .work .work-item .imgBox .picBox {
   width: 100%;
   overflow: hidden;
   margin-top: 70px;
 }
+
 .main .work .work-item .imgBox .picBox .pic-inner {
   padding-top: 100%;
   width: 100%;
 }
+
 .main .work .work-item .imgBox .picBox .pic-inner-resolution {
-  padding-top: calc( 100% * 3 / 4);
+  padding-top: calc(100% * 3 / 4);
 }
+
 .main .work .work-item .imgBox .picBox .pic-inner-resolution .pic {
   position: absolute;
   top: 0;
@@ -507,35 +573,44 @@ ul {
   background-position: center;
   transition: .5s;
 }
-.main .work .work-item .imgBox .picBox .pic-inner-resolution .pic:hover{
+
+.main .work .work-item .imgBox .picBox .pic-inner-resolution .pic:hover {
   background-size: 170%;
   transition: .5s;
 }
+
 .main .work .work-item .imgBox .picBox .pic-inner-resolution .pic1 {
   background-image: url(https://i.imgur.com/vh6mLFX.png?1);
 }
+
 .main .work .work-item .imgBox .picBox .pic-inner-resolution .pic2 {
   background-image: url(https://i.imgur.com/W0Uei37.png);
 }
+
 .main .work .work-item .imgBox .picBox .pic-inner-resolution .pic3 {
   background-image: url(https://i.imgur.com/QInp9Uu.png);
 }
+
 .main .work .work-item .imgBox .picBox .pic-inner-resolution .pic4 {
   background-image: url(https://i.imgur.com/5v8IKHn.png);
 }
+
 .main .work .work-item .TextBox {
   padding-top: 50px;
   max-width: 500px;
 }
+
 .main .work .work-item .TextBox .text-right h3 {
   color: #444;
 }
+
 .main .work .work-item .TextBox .text-right p {
   text-align: left;
   padding-left: 0;
   letter-spacing: 1px;
   color: #333;
 }
+
 .main .work .work-item .TextBox .text-right .line {
   font-size: 20px;
   color: #EC407A;
@@ -543,6 +618,7 @@ ul {
   transition: 0.5s;
   padding: 5px;
 }
+
 .main .work .work-item .TextBox .text-right .line:before {
   content: "";
   display: block;
@@ -554,20 +630,25 @@ ul {
   height: 1px;
   transition: 0.5s;
 }
+
 .main .work .work-item .TextBox .text-right .line:hover:before {
   width: 100%;
 }
+
 .main .work .work-item .TextBox .text-left {
   text-align: left;
 }
+
 .main .work .work-item .TextBox .text-left h3 {
   color: #444;
 }
+
 .main .work .work-item .TextBox .text-left p {
   padding-left: 0;
   letter-spacing: 1px;
   color: #333;
 }
+
 .main .work .work-item .TextBox .text-left .line {
   font-size: 20px;
   color: #EC407A;
@@ -575,6 +656,7 @@ ul {
   transition: 0.5s;
   padding: 5px;
 }
+
 .main .work .work-item .TextBox .text-left .line:before {
   content: "";
   display: block;
@@ -586,9 +668,11 @@ ul {
   height: 1px;
   transition: 0.5s;
 }
+
 .main .work .work-item .TextBox .text-left .line:hover:before {
   width: 100%;
 }
+
 .main .work .work-item .btn.moreBtn {
   background-color: inherit;
   border: 1px solid #e881a7;
@@ -600,50 +684,63 @@ ul {
   margin-top: 80px;
   margin-left: 0;
 }
+
 .main .work .work-item .moreBtn:hover {
   color: #fff;
   background-color: #e881a7;
 }
+
 .main .contact {
   padding-top: 100px;
   padding-bottom: 40px;
   text-align: center;
 }
+
 .main .contact h2 {
   color: #FFF;
 }
+
 .main .contact .form {
   max-width: 700px;
   margin-left: auto;
   margin-right: auto;
   text-align: left;
 }
+
 .main .contact .form .form-group label {
   font-size: 20px;
   padding-top: 10px;
   color: #e881a7;
   font-weight: 600;
 }
-.main .contact .form .form-group input, .main .contact .form .form-group textarea {
+
+.main .contact .form .form-group input,
+.main .contact .form .form-group textarea {
   width: 100%;
   background-color: rgba(0, 0, 0, 0.3);
   color: #fff;
 }
-.main .contact .form .form-group input:focus, .main .contact .form .form-group textarea:focus {
+
+.main .contact .form .form-group input:focus,
+.main .contact .form .form-group textarea:focus {
   outline: 0;
   border-color: #e881a7;
   box-shadow: 0px 0px 3px 1px #e881a7;
 }
+
 .main .contact .form .form-group textarea {
   resize: none;
   height: 300px;
 }
+
 .main .contact .form .form-group .mesinput {
   height: 200px;
 }
+
 .main .contact .form .form-group .submit {
   text-align: center;
 }
+
 .main .contact .form .form-group .submit .sendBtn {
   background-color: #e881a7;
   border-radius: 30px;
@@ -652,28 +749,36 @@ ul {
   border: none;
   line-height: 30px;
   margin-left: 0;
+  appearance: none;
 }
+
 .main .contact .form .form-group .submit .sendBtn:hover {
   opacity: 1;
   color: #fff;
 }
+
 .main .contact .bottomInfo {
   text-align: center;
 }
+
 .main .contact .bottomInfo .or {
   padding-top: 40px;
   padding-bottom: 30px;
   color: #fff;
 }
-.main .contact .bottomInfo .info .mail, .main .contact .bottomInfo .info .tel {
+
+.main .contact .bottomInfo .info .mail,
+.main .contact .bottomInfo .info .tel {
   display: block;
   margin-bottom: 30px;
   color: #e881a7;
   font-weight: 600;
 }
+
 .main .contact .bottomInfo .info .tel {
   color: #fefefe;
 }
+
 .main .contact .bottomInfo .infoIcon .fab {
   font-size: 32px;
   padding: 10px;
@@ -682,10 +787,12 @@ ul {
   cursor: pointer;
   transition: 0.3s;
 }
+
 .main .contact .bottomInfo .infoIcon .fab:hover {
   opacity: 0.8;
   transform: translateY(-20%);
 }
+
 .main .footer .finaltext p {
   text-align: center;
   max-width: 350px;
@@ -695,6 +802,7 @@ ul {
   font-weight: 600;
   padding-left: 0;
 }
+
 .main .footer .finaltext .copy {
   color: #fff;
 }
@@ -704,38 +812,47 @@ ul {
   .main .skill .card {
     height: 250px;
   }
+
   .main .skill .card .cardIcon img {
     top: 80px;
   }
-  
+
 
 }
+
 @media (max-width: 768px) {
-  .progress{
+  .progress {
     top: 55px;
     height: 2px;
   }
+
   .navbar {
     margin-top: 10px;
   }
+
   .navbar .left .fab {
     font-size: 25px;
     padding: 10px;
   }
+
   .navbar .right {
     margin-top: 4px;
   }
+
   .navbar .right .menu .bar {
     width: 25px;
     margin-top: -1px;
   }
+
   .navbar .right .responseMenu:target .responseClose .bar {
     font-size: 16px;
     background-color: #e881a7;
   }
+
   .navbar .right .responseMenu:target .ulmenu {
     margin-left: 30px;
   }
+
   .navbar .right .responseMenu:target .ulmenu .responseList {
     font-size: 30px;
   }
@@ -743,20 +860,25 @@ ul {
   .main .intro {
     margin-bottom: 50px;
   }
+
   .main .title h1 {
     font-size: 40px;
     margin-left: 30px;
   }
+
   .main .quote .container {
     padding-top: 2px;
     padding-bottom: 1px;
   }
+
   .main .skill {
     padding-top: 70px;
   }
+
   .main .skill .card {
     height: 300px;
   }
+
   .main .skill .card .cardIcon img {
     top: 100px;
   }
@@ -764,43 +886,54 @@ ul {
   .main .experience {
     padding-top: 40px;
   }
+
   .main .experience .timeline-group {
     padding-bottom: 80px;
     padding-left: 10px;
     height: 980px;
   }
+
   .main .experience .timeline-group .timeline {
     left: 15px;
   }
+
   .main .experience .timeline-group .timecard-left {
-    width: calc( 100% - 24px );
+    width: calc(100% - 24px);
     margin-left: 24px;
 
   }
+
   .main .experience .timeline-group .timecard-left:after {
     left: -27.5px;
   }
+
   .main .experience .timeline-group .timecard-right {
-    width: calc( 100% - 24px );
+    width: calc(100% - 24px);
     margin-left: 24px;
   }
+
   .main .experience .timeline-group .timecard-right:before {
     left: -27.5px;
   }
+
   .main .experience .timeline-group .timecard-four {
     margin-bottom: 0;
   }
+
   .main .work {
     padding-top: 40px;
     padding-bottom: 120px;
   }
+
   .main .work .work-item .row .TextBox {
     padding-left: 15px;
     padding-top: 0;
   }
+
   .main .work .work-item .row .TextBox .text-right {
     text-align: left !important;
   }
+
   .main .contact {
     padding-top: 80px;
   }
@@ -811,20 +944,23 @@ ul {
   .main .experience .timeline-group .timeline {
     left: 16px;
   }
+
   .main .skill .card {
     height: 270px;
   }
+
   .main .skill .card .cardIcon img {
     top: 85px;
   }
 }
 
-@media (max-width:320px){
+@media (max-width:320px) {
   .main .skill .card {
     height: 320px;
   }
 }
-@media (max-width:280px){
+
+@media (max-width:280px) {
   .main .skill .card {
     height: 390px;
   }
