--- a/style.css
+++ b/style.css
@@ -114,9 +114,22 @@ ul {
   position: fixed;
   left: 0;
   top: 57px;
+  width: 200px;
   height: 5px;
   z-index: 100;
-  background-color: #c87db4;
+  background: linear-gradient(90deg, #ffd33d, #ea4aaa 17%, #b34bff 34%, #01feff 51%, #ffd33d 68%, #ea4aaa 85%, #b34bff);
+  background-size: 300% 100%;
+  animation: progress-animation 2s linear infinite;
+}
+
+@keyframes progress-animation {
+  0% {
+    background-position: 100%;
+  }
+
+  100% {
+    background-position: 0;
+  }
 }
 
 .bg {
