--- a/engstyle.css
+++ b/engstyle.css
@@ -488,8 +488,9 @@ ul {
   padding-right: 10px;
   margin-top: 12px;
   width: calc(100% -60px);
-  text-align: justify;
-  text-justify: distribute;
+  /* text-align: justify; */
+  /* text-justify: distribute; */
+  word-spacing: 3px;
 }
 
 .main .experience {
@@ -647,7 +648,7 @@ ul {
   padding-left: 0;
   color: #333;
   text-align: justify;
-  text-justify: distribute;
+  /* text-justify: distribute; */
 }
 
 .main .work .work-item .TextBox .text-right .line {
