--- a/style.css
+++ b/style.css
@@ -1,36 +1,11 @@
 @charset "UTF-8";
-
+/* preset start */
 * {
   position: relative;
   box-sizing: border-box;
   font-family: 微軟正黑體;
   margin: 0;
   padding: 0;
-}
-
-/* 滾動條 */
-*::-webkit-scrollbar {
-  /*整體滾動條寬高*/
-  margin-right: 2px;
-  width: 8px;
-  height: 8px;
-}
-
-*::-webkit-scrollbar-thumb {
-  /*滾動條內部樣式*/
-  border-radius: 8px;
-  background: #e881a7;
-  
-}
-
-*::-webkit-scrollbar-thumb:hover {
-  /*滾動條懸浮樣式*/
-  opacity: .5;
-}
-
-*::-webkit-scrollbar-track {
-  /*滾動條顏色*/
-  background: #fff;
 }
 
 .poFixed {
@@ -134,6 +109,223 @@ ul {
   margin: 0;
   padding: 0;
 }
+/* preset end */
+
+/* sliderBar start */
+*::-webkit-scrollbar {
+  /*整體滾動條寬高*/
+  margin-right: 2px;
+  width: 8px;
+  height: 8px;
+}
+
+*::-webkit-scrollbar-thumb {
+  /*滾動條內部樣式*/
+  border-radius: 8px;
+  background: #e881a7;
+  
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  /*滾動條懸浮樣式*/
+  opacity: .5;
+}
+
+*::-webkit-scrollbar-track {
+  /*滾動條顏色*/
+  background: #fff;
+}
+/* sliderBar End */
+
+/* Loading start */
+.preload{
+  position: absolute;
+  z-index: 200;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+.preload .loading {
+  position: absolute;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+          align-items: center;
+  z-index: 100;
+  background-color: #f1f1f1;
+  width: 100%;
+  height: 100%;
+}
+.preload .loading .wBall {
+  position: absolute;
+  width: 46px;
+  height: 46px;
+  opacity: 0;
+  transform: rotate(225deg);
+  -o-transform: rotate(225deg);
+  -ms-transform: rotate(225deg);
+  -webkit-transform: rotate(225deg);
+  -moz-transform: rotate(225deg);
+  animation: orbit 3.0225s infinite;
+  -o-animation: orbit 3.0225s infinite;
+  -ms-animation: orbit 3.0225s infinite;
+  -webkit-animation: orbit 3.0225s infinite;
+  -moz-animation: orbit 3.0225s infinite;
+}
+.preload .loading .wBall .wInnerBall {
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  background: rgba(30, 219, 232, 0.97);
+  left: 0px;
+  top: 0px;
+  border-radius: 6px;
+}
+.preload .loading #wBall_1 {
+  animation-delay: 0.656s;
+  -o-animation-delay: 0.656s;
+  -ms-animation-delay: 0.656s;
+  -webkit-animation-delay: 0.656s;
+  -moz-animation-delay: 0.656s;
+}
+.preload .loading #wBall_2 {
+  animation-delay: 0.133s;
+  -o-animation-delay: 0.133s;
+  -ms-animation-delay: 0.133s;
+  -webkit-animation-delay: 0.133s;
+  -moz-animation-delay: 0.133s;
+}
+.preload .loading #wBall_3 {
+  animation-delay: 0.2665s;
+  -o-animation-delay: 0.2665s;
+  -ms-animation-delay: 0.2665s;
+  -webkit-animation-delay: 0.2665s;
+  -moz-animation-delay: 0.2665s;
+}
+.preload .loading #wBall_4 {
+  animation-delay: 0.3995s;
+  -o-animation-delay: 0.3995s;
+  -ms-animation-delay: 0.3995s;
+  -webkit-animation-delay: 0.3995s;
+  -moz-animation-delay: 0.3995s;
+}
+.preload .loading #wBall_5 {
+  animation-delay: 0.533s;
+  -o-animation-delay: 0.533s;
+  -ms-animation-delay: 0.533s;
+  -webkit-animation-delay: 0.533s;
+  -moz-animation-delay: 0.533s;
+}
+
+@keyframes orbit {
+  0% {
+    opacity: 1;
+    z-index: 99;
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  7% {
+    opacity: 1;
+    -webkit-transform: rotate(300deg);
+            transform: rotate(300deg);
+    -webkit-animation-timing-function: linear;
+            animation-timing-function: linear;
+    origin: 0%;
+  }
+  30% {
+    opacity: 1;
+    -webkit-transform: rotate(410deg);
+            transform: rotate(410deg);
+    -webkit-animation-timing-function: ease-in-out;
+            animation-timing-function: ease-in-out;
+    origin: 7%;
+  }
+  39% {
+    opacity: 1;
+    -webkit-transform: rotate(645deg);
+            transform: rotate(645deg);
+    -webkit-animation-timing-function: linear;
+            animation-timing-function: linear;
+    origin: 30%;
+  }
+  70% {
+    opacity: 1;
+    -webkit-transform: rotate(770deg);
+            transform: rotate(770deg);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+    origin: 39%;
+  }
+  75% {
+    opacity: 1;
+    -webkit-transform: rotate(900deg);
+            transform: rotate(900deg);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+    origin: 70%;
+  }
+  76% {
+    opacity: 0;
+    -webkit-transform: rotate(900deg);
+            transform: rotate(900deg);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: rotate(900deg);
+            transform: rotate(900deg);
+  }
+}
+@-webkit-keyframes orbit {
+  0% {
+    opacity: 1;
+    z-index: 99;
+    -webkit-transform: rotate(180deg);
+    -webkit-animation-timing-function: ease-out;
+  }
+  7% {
+    opacity: 1;
+    -webkit-transform: rotate(300deg);
+    -webkit-animation-timing-function: linear;
+    -webkit-origin: 0%;
+  }
+  30% {
+    opacity: 1;
+    -webkit-transform: rotate(410deg);
+    -webkit-animation-timing-function: ease-in-out;
+    -webkit-origin: 7%;
+  }
+  39% {
+    opacity: 1;
+    -webkit-transform: rotate(645deg);
+    -webkit-animation-timing-function: linear;
+    -webkit-origin: 30%;
+  }
+  70% {
+    opacity: 1;
+    -webkit-transform: rotate(770deg);
+    -webkit-animation-timing-function: ease-out;
+    -webkit-origin: 39%;
+  }
+  75% {
+    opacity: 1;
+    -webkit-transform: rotate(900deg);
+    -webkit-animation-timing-function: ease-out;
+    -webkit-origin: 70%;
+  }
+  76% {
+    opacity: 0;
+    -webkit-transform: rotate(900deg);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: rotate(900deg);
+  }
+}
+/* Loading end */
 
 .progress {
   position: fixed;
