--- a/style.css
+++ b/style.css
@@ -819,7 +819,7 @@ ul {
 }
 
 .main .work .work-item .imgBox .picBox .pic-inner-resolution {
-  padding-top: calc(100% * 3 / 4);
+  padding-top: calc(100% * 9 / 16);
 }
 
 .main .work .work-item .imgBox .picBox .pic-inner-resolution .pic {
@@ -828,18 +828,18 @@ ul {
   left: 0;
   width: 100%;
   height: 100%;
-  background-size: 147%;
+  /* background-size: 147%; */
   background-position: center;
   transition: .5s;
 }
 
 .main .work .work-item .imgBox .picBox .pic-inner-resolution .pic:hover {
-  background-size: 170%;
+  /* background-size: 170%; */
   transition: .5s;
 }
 
-.main .work .work-item .imgBox .picBox .pic-inner-resolution .pic1 {
-  background-image: url(https://i.imgur.com/vh6mLFX.png?1);
+/* .main .work .work-item .imgBox .picBox .pic-inner-resolution .pic1 {
+  background-image: url(./asset/worksCounter.PNG);
 }
 
 .main .work .work-item .imgBox .picBox .pic-inner-resolution .pic2 {
@@ -851,8 +851,8 @@ ul {
 }
 
 .main .work .work-item .imgBox .picBox .pic-inner-resolution .pic4 {
-  background-image: url(https://i.imgur.com/5v8IKHn.png);
-}
+  background-image: url(./asset/video.png);
+} */
 
 .main .work .work-item .TextBox {
   padding-top: 50px;
