--- a/engstyle.css
+++ b/engstyle.css
@@ -827,17 +827,17 @@ ul {
   left: 0;
   width: 100%;
   height: 100%;
-  background-size: 147%;
+  /* background-size: 147%; */
   background-position: center;
   transition: .5s;
 }
 
 .main .work .work-item .imgBox .picBox .pic-inner-resolution .pic:hover {
-  background-size: 170%;
+  /* background-size: 170%; */
   transition: .5s;
 }
 
-.main .work .work-item .imgBox .picBox .pic-inner-resolution .pic1 {
+/* .main .work .work-item .imgBox .picBox .pic-inner-resolution .pic1 {
   background-image: url(https://i.imgur.com/vh6mLFX.png?1);
 }
 
@@ -851,7 +851,7 @@ ul {
 
 .main .work .work-item .imgBox .picBox .pic-inner-resolution .pic4 {
   background-image: url(https://i.imgur.com/5v8IKHn.png);
-}
+} */
 
 .main .work .work-item .TextBox {
   padding-top: 50px;
